Bug 110942 - The hourglass cursor is kept too long
Summary: The hourglass cursor is kept too long
Status: RESOLVED FIXED
Alias: None
Product: kreversi
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Inge Wallin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-08-17 01:31 UTC by Inge Wallin
Modified: 2006-07-03 16:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Inge Wallin 2005-08-17 01:31:57 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources

When the computer makes the last move, the hourglass cursor is kept far too long.  For instance, if the user wins, the hourglass is kept during the showing of the high scores.
Comment 1 Inge Wallin 2006-07-03 16:30:12 UTC
SVN commit 557558 by ingwa:

Fix bug 110942: The hourglass cursor is kept too long

 - Set state to Ready when the game is over.

BUG: 110942



 M  +5 -0      ChangeLog  
 M  +2 -0      kreversi.cpp  


--- branches/KDE/3.5/kdegames/kreversi/ChangeLog #557557:557558
@@ -1,5 +1,10 @@
 2006-07-03  Inge Wallin  <inge@lysator.liu.se>
 
+	* kreversi.cpp (slotGameOver): Set state back to Ready after the
+	game is finished, and before showing highscore.
+
+2006-07-03  Inge Wallin  <inge@lysator.liu.se>
+
 	* version.h (KREVERSI_VERSION): Update version to 1.7.1 for KDE
 	3.5.4.
 
--- branches/KDE/3.5/kdegames/kreversi/kreversi.cpp #557557:557558
@@ -486,6 +486,8 @@
   uint  black = m_game->score(Black);
   uint  white = m_game->score(White);
 
+  setState(Ready);
+
   if (black > white)
     showGameOver(Black);
   else if (black < white)
Comment 2 Inge Wallin 2006-07-03 16:32:32 UTC
SVN commit 557559 by ingwa:

Fix bug 110942: The hourglass cursor is kept too long 
 
 - Set state to Ready when the game is over. 

This bug was the last one for KReversi, so the bug count is now ZERO!
 
CCBUG: 110942 



 M  +5 -0      ChangeLog  
 M  +2 -0      kreversi.cpp  


--- trunk/KDE/kdegames/kreversi/ChangeLog #557558:557559
@@ -1,5 +1,10 @@
 2006-07-03  Inge Wallin  <inge@lysator.liu.se>
 
+	* kreversi.cpp (slotGameOver): Set state back to Ready after the
+	game is finished, and before showing highscore.
+
+2006-07-03  Inge Wallin  <inge@lysator.liu.se>
+
 	* Position.cpp (undoMove): Keep track of score when undoing a
 	move.
 
--- trunk/KDE/kdegames/kreversi/kreversi.cpp #557558:557559
@@ -491,6 +491,8 @@
   uint  black = m_game->score(Black);
   uint  white = m_game->score(White);
 
+  setState(Ready);
+
   if (black > white)
     showGameOver(Black);
   else if (black < white)