Fix bug 110942: The hourglass cursor is kept too long

- Set state to Ready when the game is over.

BUG: 110942


svn path=/branches/KDE/3.5/kdegames/kreversi/; revision=557558